apps/tracktor/tracktor-1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracktor
  annotations:
    volsync.backube/privileged-movers: "true"
