apps/tracktor/tracktor-1/deployment-tracktor-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tracktor-1
  name: tracktor-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracktor-1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tracktor-1
    spec:
      containers:
        - image: ghcr.io/javedh-dev/tracktor:2.1.0
          name: tracktor-1
          resources:
            requests:
              memory: 40Mi
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: tracktor-1

      restartPolicy: Always
      volumes:
        - name: tracktor-1
          persistentVolumeClaim:
            claimName: tracktor-1
