apps/tracktor/tracktor-1/service-tracktor-1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tracktor-1
  name: tracktor-1
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: tracktor-1
